--- a/tabela_kucharz.html
+++ b/tabela_kucharz.html
@@ -12,15 +12,15 @@
  <caption>Tabela </caption>
  <thead>
  <tr>
-  <td COLSPAN=6><p align=center><font face="Arial" size=3><b>Dane komputerowe – Michał Kucharz 2Fg1</b></font></p></td> 
+  <td COLSPAN=6><center><font face="Arial" size=3><b>Dane komputerowe – Michał Kucharz 2Fg1</b></font></center></td> 
  </tr>
  <tr>
- <td bgcolor="#d17626"><p align=left><font face="Times new roman" color=white size=3>Model <br>procesora</font></p></td>
- <td bgcolor="#d17626"><p align=left><font face="Times new roman" color=white size=3>Maksymalna <br>częstotliwość</font></p></td>
- <td bgcolor="#d17626"><p align=left><font face="Times new roman" color=white size=3>TDP &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></p></td>
- <td bgcolor="#d17626"><p align=left><font face="Times new roman" color=white size=3>Pamięć cache</font></p></td>
- <td bgcolor="#d17626"><p align=left><font face="Times new roman" color=white size=3>Rdzenie | &nbsp;&nbsp;&nbsp;<br>wątki</font></p></td>
- <td bgcolor="#d17626"><p align=left><font face="Times new roman" color=white size=3>Zintegrowana <br>grafika</font></p></td>
+ <td bgcolor="#d17626"><font face="Times new roman" color=white size=3>Model <br>procesora</font></td>
+ <td bgcolor="#d17626"><font face="Times new roman" color=white size=3>Maksymalna <br>częstotliwość</font></td>
+ <td bgcolor="#d17626"><font face="Times new roman" color=white size=3>TDP &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></td>
+ <td bgcolor="#d17626"><font face="Times new roman" color=white size=3>Pamięć cache</font></td>
+ <td bgcolor="#d17626"><font face="Times new roman" color=white size=3>Rdzenie | &nbsp;&nbsp;&nbsp;<br>wątki</font></td>
+ <td bgcolor="#d17626"><font face="Times new roman" color=white size=3>Zintegrowana <br>grafika</font></td>
  </tr>
  </thead>
  <tbody>
@@ -61,14 +61,14 @@
  <td bgcolor="#dbc84d" align=center>8 | 16</td>
  </tr>
  <tr>
- <td COLSPAN=6 bgcolor=#e8aa38><p align=center><font face="Arial" size=3> Dane komputerowe</p></font></td>
+ <td COLSPAN=6 bgcolor=#e8aa38><center><font face="Arial" size=3> Dane komputerowe</center></font></td>
  </tr>
  </tbody>
 </table>
 </center>
 
 
-<p align=center><font face="Arial" size=1 color=red>Źródło: własne</font></p>
+<p align=center><font face="Arial" size=1 color=red><u>Źródło: własne</u></font></p>
 
 
 	<br>
